# log4c

./: CMakeLists.txt  README.md  conanfile.py  log4c-config.cmake.in
include/: log4c.h
src/: log4c.c
